--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "ng build --configuration production --base-href https://callmeab.github.io/portfolia/ && npx angular-cli-ghpages --dir=dist/portfolia"
   },
   "prettier": {
     "printWidth": 100,
