--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --configuration production --base-href https://callmeab.github.io/portfolia/ && npx angular-cli-ghpages --dir=dist/portfolia"
+    "deploy": "ng build --configuration production --base-href /portfolia/ && npx angular-cli-ghpages --dir=dist/portfolia/browser"
   },
   "prettier": {
     "printWidth": 100,
